[project]
name = "samudra-ai"
version = "0.1.0"
authors = [
    { name="Adityo Wicaksono", email="adityo.wicaksono@bmkg.go.id" },
]
description = "Paket Python untuk pengolahan koreksi bias model iklim global menggunakan deep learning CNN-BiLSTM."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "xarray",
    "numpy",
    "pandas",
    "tensorflow",
    "scikit-learn",
    "matplotlib",
    "h5netcdf",
    "cftime",
    "scikit-image"
]
