[project]
name = "samudra-ai"
version = "0.1.1"
authors = [
    { name="Adityo Wicaksono", email="adityo.wicaksono@bmkg.go.id" },
]
description = "Paket Python untuk pengolahan koreksi bias model iklim global menggunakan deep learning CNN-BiLSTM."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "xarray",
    "numpy",
    "pandas",
    "tensorflow",
    "scikit-learn",
    "matplotlib",
    "h5netcdf",
    "cftime",
    "scikit-image",
    "joblib"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/adityoAJA/samudra-ai"
"Bug Tracker" = "https://github.com/adityoAJA/samudra-ai/issues"
